--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,7 +44,7 @@ en:
     saved: 'נשמר'
     welcome: 'שלום'
     start: 'התחל'
-    welcome_sentence: 'ברוך הבא לשאלון של StepAhead, לחץ "התחל" וענה על השאלות בדפים הבאים'
+    welcome_sentence: 'ברוך הבא לשאלון של <span dir="ltr">StepAhead</span>, לחץ "התחל" וענה על השאלות בדפים הבאים'
     clear_selection: 'נקה בחירה'
     error_answer_for_employees: 'סמן V או X עבור כל האנשים ברשימה על מנת להמשיך'
     success_all_employees_answered: 'ענית על השאלה עבור כל האנשים ברשימה , ניתן להמשיך לשאלה הבאה'
