ui for wellcome-back, finish, finish-task screens

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,16 +31,19 @@ en:
     continue_later_button: 'המשך אחר כך'
     close_button: 'סגור'
     search: 'חפש'
-    question_completion_note_html: 'סיימת לענות על השאלה<br><br> להמשך בחר/י אחת מהאפשרויות הבאות בסרגל בתחתית המסך:'
+    question_completion_note_html: 'סיימת לענות על השאלה'
     revise_selection: 'חזור/חזרי לשאלה ושנה את בחירותיך'
     continue_to_next_question: 'המשך'
     thank_you: 'השאלון הסתיים'
     thank_you_note: 'תודה רבה על השתתפותך'
+    click_to_answer_additional_questions: "לחץ כאן למענה על מס' שאלות נוספות"
     questionnaire_completion_note: 'To complete the questionnaire, please continue to the following form'
     welcome_back: 'שלום'
-    you_are_in_html: 'את/ה נמצא/ת ב<b>שאלה מספר</b>'
+    you_are_in_html: 'את/ה נמצא/ת בשאלה מספר'
     click_the_continue: 'הקש/י על הכפתור מטה על מנת להמשיך את השאלון'
     continue_saved_session_button: 'המשכ/י לענות על השאלון'
+    continue_answer_next_question: 'המשך לשאלה הבאה'
+    saved_location_message: 'המערכת שמרה את מיקומכם בשאלון במידה ותרצו להמשיך במילוי מאוחר יותר'
     saved: 'נשמר'
     welcome: 'שלום'
     start: 'התחל'
@@ -51,6 +54,7 @@ en:
     resume: 'המשך'
     must_select: 'עליך לבחור לפחות'
     people_to_continue: 'אנשים על מנת להמשיך'
+    to_continue: 'על מנת להמשיך'
     find_employees: 'חפש'
     selected: 'משתתפים שנבחרו'
     connection_lost: 'Connection is lost please check your internet connection'
