--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -33,16 +33,19 @@ ka:
     continue_later_button: 'დამახსოვრება'
     close_button: 'დახურვა'
     search: 'ძებნა'
-    question_completion_note_html: 'თქვენ დაასრულეთ დავალება. გთხვოთ, აირჩიეთ ერთ-ერთი'
+    question_completion_note_html: 'თქვენ დაასრულეთ დავალება'
     revise_selection: 'გადახედეთ თქვენს არჩევანს'
     continue_to_next_question: 'გადადით შემდეგ შეკითხვაზე'
     thank_you: 'გმადლობთ'
     thank_you_note: 'რომ დაუთმეთ დრო ამ კითხვარს!'
+    click_to_answer_additional_questions: 'დააჭირეთ აქ, რომ უპასუხოთ დამატებით კითხვებს'
     questionnaire_completion_note_html: 'კითხვარის დასასრულებლად, გთხოვთ შეავსოთ შემდეგი ფორმა'
     welcome_back: 'კეთილი იყოს თქვენი დაბრუნება'
     you_are_in_html: 'თქვენ პასუხობთ შეკითხვას'
     click_the_continue: 'გთხოვთ, დააჭირეთ გაგრძელების ღილაკს, რომ დაუბრუნდეთ თქვენს შენახულ სესიას'
     continue_saved_session_button: 'შენახული სესიის გაგრძელება'
+    continue_answer_next_question: 'შენახული სესიის გაგრძელება'
+    saved_location_message: ''
     saved: 'დამახსოვრებულია'
     welcome: 'კეთილი იყოს თქვენი მობრძანება'
     start: 'დაწყება'
@@ -53,6 +56,7 @@ ka:
     resume: 'გაგრძელება'
     must_select: 'გთხოვთ აირჩიეთ'
     people_to_continue: 'კოლეგა გასაგრძელებლად'
+    to_continue: 'კოლეგა გასაგრძელებლად'
     find_employees: 'თანამშრომლის ძიება'
     selected: 'შერჩეულები'
     connection_lost: 'კავშირი დაკარგულია. გთხოვთ გადაამოწმოთ ინტერნეტთან წვდომა'
