pretty confirm-box - search

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,7 @@ en:
     to_continue: 'על מנת להמשיך'
     find_employees: 'חפש'
     selected: 'משתתפים שנבחרו'
+    are_you_sure: 'האם את/ה בטוח/ה כי ברצונך לבחור את'
     connection_lost: 'Connection is lost please check your internet connection'
   sms:
     success: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. לחצ/י על הקישור כדי להתחיל את השאלון'
