--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -59,4 +59,5 @@ ka:
     to_continue: 'კოლეგა გასაგრძელებლად'
     find_employees: 'თანამშრომლის ძიება'
     selected: 'შერჩეულები'
+    are_you_sure: 'დარწმუნებული ხართ, რომ გსურთ არჩევანის გაკეთება'
     connection_lost: 'კავშირი დაკარგულია. გთხოვთ გადაამოწმოთ ინტერნეტთან წვდომა'
