--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -61,3 +61,6 @@ ka:
     selected: 'შერჩეულები'
     are_you_sure: 'დარწმუნებული ხართ, რომ გსურთ არჩევანის გაკეთება'
     connection_lost: 'კავშირი დაკარგულია. გთხოვთ გადაამოწმოთ ინტერნეტთან წვდომა'
+    ok: ''
+    cancel: ''
+
