--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,44 +21,46 @@
 
 en:
   questionnaire:
-    hi: 'שלום'
-    how_to_answer_html: 'לפניך שאלון אינטראקטיבי קצר.<br><b>הקש/י</b> או <b>החלק/י</b> על המסך לפי ההוראות על מנת לענות על השאלון'    
-    how_to_tap_html: '<b>הקש/י</b> על <p class=x-icon></p> או <p class=v-icon></p><br> על מנת לענות על השאלה' 
-    or: 'או'
-    how_to_swipe_html: '<b>החלק/י</b> ימינה על מנת לענות כן <br> <b>החלק/י</b> שמאלה על מנת לענות לא'
-    how_to_scroll_html: '<b>גלול/גללי</b> מטה או מעלה על מנת לעבור למשתתפ/ת הבא ברשימה'
-    continue_button: 'המשך'
-    continue_later_button: 'המשך אחר כך'
-    close_button: 'סגור'
-    search: 'חפש'
-    question_completion_note_html: 'סיימת לענות על השאלה'
-    revise_selection: 'חזור/חזרי לשאלה ושנה את בחירותיך'
-    continue_to_next_question: 'המשך'
-    thank_you: 'השאלון הסתיים'
-    thank_you_note: 'תודה רבה על השתתפותך'
-    click_to_answer_additional_questions: "לחץ כאן למענה על מס' שאלות נוספות"
+    hi: 'Hi'
+    how_to_answer_html: 'To answer a question please <b>tap</b> or <b>swipe</b> as instructed below'
+    how_to_tap_html: '<b>Tap</b> icons to answer "Yes" or "No" to questions'
+    or: 'OR'
+    how_to_swipe_html: '<b>Swipe</b> right to answer <br> "Yes" and left to <br> answer "No" to <br> questions'
+    how_to_scroll_html: '<b>Scroll</b> Up/Down to <br> move to the next <br> person'
+    continue_button: 'Continue'
+    continue_later_button: 'Continue Later'
+    close_button: 'Close'
+    search: 'Search'
+    question_completion_note_html: 'You have completed this task'
+    revise_selection: 'Revise your selections'
+    continue_to_next_question: 'continue to the next question'
+    thank_you: 'Thank you'
+    thank_you_note: 'For answering this questionnaire'
+    click_to_answer_additional_questions: 'Click here to answer a number of additional questions'
     questionnaire_completion_note: 'To complete the questionnaire, please continue to the following form'
-    welcome_back: 'שלום'
-    you_are_in_html: 'את/ה נמצא/ת בשאלה מספר'
-    click_the_continue: 'הקש/י על הכפתור מטה על מנת להמשיך את השאלון'
-    continue_saved_session_button: 'המשכ/י לענות על השאלון'
-    continue_answer_next_question: 'המשך לשאלה הבאה'
-    saved_location_message: 'המערכת שמרה את מיקומכם בשאלון במידה ותרצו להמשיך במילוי מאוחר יותר'
-    saved: 'נשמר'
-    welcome: 'שלום'
-    start: 'התחל'
-    welcome_sentence: 'ברוך הבא לשאלון של <span dir="ltr">StepAhead</span>, לחץ "התחל" וענה על השאלות בדפים הבאים'
-    clear_selection: 'נקה בחירה'
-    error_answer_for_employees: 'סמן V או X עבור כל האנשים ברשימה על מנת להמשיך'
-    success_all_employees_answered: 'ענית על השאלה עבור כל האנשים ברשימה , ניתן להמשיך לשאלה הבאה'
-    resume: 'המשך'
-    must_select: 'עליך לבחור לפחות'
-    people_to_continue: 'אנשים על מנת להמשיך'
-    to_continue: 'על מנת להמשיך'
-    find_employees: 'חפש'
-    selected: 'משתתפים שנבחרו'
-    are_you_sure: 'האם את/ה בטוח/ה כי ברצונך לבחור את'
+    welcome_back: 'Welcome back'
+    you_are_in_html: 'You are in <b>question number</b>'
+    click_the_continue: 'Click the continue button below to continue your saved session'
+    continue_saved_session_button: 'Continue Saved Session'
+    continue_answer_next_question: 'Continue to the next question'
+    saved_location_message: 'The system has saved your position in the questionnaire in case you want to continue filling in later'
+    saved: 'Saved'
+    welcome: 'Welcome'
+    start: 'Start'
+    welcome_sentence: 'Welcome to StepAhead questionnaire, please answer the following questions'
+    clear_selection: 'Clear Selection'
+    error_answer_for_employees: 'You must answer the question for all people in the list bellow'
+    success_all_employees_answered: 'You have answered the question for all employees'
+    resume: 'Resume'
+    must_select: 'You must select at least'
+    people_to_continue: 'People to continue'
+    to_continue: 'to continue'
+    find_employees: 'Find employees'
+    selected: 'Selected'
+    are_you_sure: 'Are you sure you want to choose'
     connection_lost: 'Connection is lost please check your internet connection'
+    ok: 'Ok'
+    cancel: 'Cancel'
   sms:
-    success: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. לחצ/י על הקישור כדי להתחיל את השאלון'
-    fail: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. מספר תעודת הזהות ששלחת אינו מופיע במערכת שלח/י שנית או פנה/י לתמיכה.'
+    success: 'Welcome to StepAhead employee evaluation questionnaire. Click on the following link to start the questionnaire:'
+    fail: 'Welcome to StepAhead employee evaluation questionnaire. The ID number you sent is not registered. Send the correct ID again or contact support.'
