--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -62,7 +62,8 @@ he:
     ok: 'אישור'
     cancel: 'ביטול'
     search_message: 'חיפוש משתתף ע"פ שם'
-    clise_search: 'סגור רשימת חיפוש'
+    close_search: 'סגור רשימת חיפוש'
+    no_results: 'אין תוצאות'
   sms:
     success: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. לחצ/י על הקישור כדי להתחיל את השאלון'
     fail: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. מספר תעודת הזהות ששלחת אינו מופיע במערכת שלח/י שנית או פנה/י לתמיכה.'
