--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -64,6 +64,9 @@ he:
     search_message: 'חיפוש משתתף ע"פ שם'
     close_search: 'סגור רשימת חיפוש'
     no_results: 'אין תוצאות'
+    safari_msg: 'על מנת להינות מחוויה מיטבית בעת מילוי השאלון אנו ממליצים לפתוח את הסקר בדפדפן כרום'
+    copy_link: 'העתק קישור'
+    link_copied: 'הועתק'
   sms:
     success: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. לחצ/י על הקישור כדי להתחיל את השאלון'
     fail: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. מספר תעודת הזהות ששלחת אינו מופיע במערכת שלח/י שנית או פנה/י לתמיכה.'
