--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -67,6 +67,13 @@ he:
     safari_msg: 'על מנת להינות מחוויה מיטבית בעת מילוי השאלון אנו ממליצים לפתוח את הסקר בדפדפן כרום'
     copy_link: 'העתק קישור'
     link_copied: 'הועתק'
+    first_name: 'שם פרטי'
+    last_name: 'שם משפחה'
+    department: 'מחלקה'
+    select_department: 'בחר מחלקה'
+    enter_first_name: 'שם פרטי'
+    enter_last_name: 'שם משפחה'
+    save : 'שמור'
   sms:
     success: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. לחצ/י על הקישור כדי להתחיל את השאלון'
     fail: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. מספר תעודת הזהות ששלחת אינו מופיע במערכת שלח/י שנית או פנה/י לתמיכה.'
