--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -74,6 +74,14 @@ he:
     enter_first_name: 'שם פרטי'
     enter_last_name: 'שם משפחה'
     save : 'שמור'
+    hello : 'שלום'
+    text_snowball_1 : 'כחלק מתהליך מיפוי רשתי, לפניך שאלון אינטראקטיבי קצר.'
+    text_snowball_2 : 'על השאלה הראשונה נבקשך לענות על ידי הקלדת שמות של אנשים בהתאם לשאלה.'
+    text_snowball_3 : 'בשאלות הבאות נשאל שאלות על האנשים שציינת בשאלה הראשונה.'
+    text_snowball_4 : 'החלק/י ימינה <br> על מנת לענות כן'
+    text_snowball_5 : 'החלק/י שמאלה <br> על מנת לענות לא'
+    text_snowball_6 : 'לתשומת ליבך,<br>בלחיצה על המשך את.ה מאשר.ת כי פרטיך ישמרו במערכת סטפאהד עד לסיום התהליך'
+
   sms:
     success: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. לחצ/י על הקישור כדי להתחיל את השאלון'
     fail: 'ברוכ/ה הבא/ה לשאלון הערכת עובדים מטעם חברת Stepahead. מספר תעודת הזהות ששלחת אינו מופיע במערכת שלח/י שנית או פנה/י לתמיכה.'
